# ru-minecraft_bot

./: README.md  main.db  pyproject.toml  types.json  ver.json
ru_minecraft/: config.py  main.py
ru_minecraft/bot/: __init__.py  core.py  greet.py  helpers.py  keyboard.py  set_handlers.py  texts.py  viewer.py
ru_minecraft/database/: __init__.py
ru_minecraft/parser/: __init__.py  vers_and_type.py  view_session.py
